# Autonomy-Science-And-Systems

./: DISCLAIMER.md  README.md
Assignment 1-A/Chinmay/: README.md
Assignment 1-A/Tanmay/: README.md  ROS Comparative Study.pptx
Assignment 1-B/Chinmay/: README.md
Assignment 1-B/Chinmay/assignment_1b/: package.xml  setup.py
Assignment 1-B/Chinmay/assignment_1b/assignment_1b/: closed_loop_square.py  open_loop_circle.py  open_loop_square.py
Assignment 1-B/Chinmay/assignment_1b/launch/: closed_loop_square.launch.py  open_loop_circle.launch.py  open_loop_square.launch.py
Assignment 1-B/Tanmay/: README.md
Assignment 1-B/Tanmay/assignment_1b/: package.xml  setup.cfg  setup.py
Assignment 1-B/Tanmay/assignment_1b/assignment_1b/: go_in_circle.py  go_to_goal.py  square_closed_loop.py  square_open_loop.py
Assignment 1-B/Tanmay/assignment_1b/launch/: go_in_circle.launch.py  go_to_goal.launch.py  square_closed_loop.launch.py  square_open_loop.launch.py
Assignment 1-B/Tanmay/media/: go_to_goal.mkv
Assignment 1-C/: README.md
Assignment 1-C/assignment_1c/assignment_1c/: package.xml  setup.cfg  setup.py
Assignment 1-C/assignment_1c/assignment_1c/assignment_1c/: circle.py  square.py
Assignment 1-C/assignment_1c/assignment_1c/launch/: circle.launch.py  move.launch.py  square.launch.py
Assignment 1-C/assignment_1c/turtlebot3/DynamixelSDK/dynamixel_sdk_examples/: package.xml
Assignment 2-A/: README.md
Assignment 2-A/slides/: Assignment 2-A.pptx
Assignment 2-B/: README.md
Assignment 2-B/assignment_2b/assignment_2b/: package.xml  setup.cfg  setup.py
Assignment 2-B/assignment_2b/turtlebot3/DynamixelSDK/dynamixel_sdk/: package.xml
Assignment 3-A/: README.md
Assignment 3-A/assignment_3a/assignment_3a/: package.xml  setup.cfg  setup.py
Assignment 3-A/media/: emergency_braking.mkv
Assignment 3-B/: README.md
Assignment 3-B/assignment_3b/apriltag_msgs/: CMakeLists.txt
Assignment 3-B/assignment_3b/apriltag_ros/: CMakeLists.txt  README.md
Assignment 3-B/assignment_3b/assignment_3b/: package.xml  setup.cfg  setup.py
Assignment 3-B/assignment_3b/tag36h11/: size.txt
Capstone Project/: AuE8230_S23_ASS_Capstone_Project.md  README.md
Capstone Project/capstone_project/apriltag_msgs/: package.xml
Capstone Project/capstone_project/apriltag_msgs/msg/: AprilTagDetection.msg
Capstone Project/capstone_project/apriltag_ros/: package.xml
Capstone Project/capstone_project/camera_info/: README.txt  arducam_8mp:_usb_camera.txt  arducam_8mp:_usb_camera.yaml
Capstone Project/capstone_project/capstone_project/: package.xml  setup.cfg  setup.py
Capstone Project/capstone_project/capstone_project/capstone_project/: apriltag_teleop.py  apriltag_tracking.py  apriltag_tracking_real.py  apriltag_tracking_sim.py  capstone_project_real.py  capstone_project_sim.py  lane_keeping.py  line_following_real.py  line_following_sim.py  obstacle_avoidance_real.py  obstacle_avoidance_sim.py  stop_sign_detection_real.py  stop_sign_detection_sim.py  wall_following.py  wall_following_real.py
Capstone Project/capstone_project/capstone_project/launch/: apriltag_tracking.launch.py  apriltag_tracking_real.launch.py  apriltag_tracking_sim.launch.py  capstone_project_real.launch.py  capstone_project_sim.launch.py  lane_following.launch.py  lane_keeping.launch.py  line_following_real.launch.py  line_following_sim.launch.py  obstacle_avoidance_real.launch.py  obstacle_avoidance_sim.launch.py  project_world.launch.py  stop_sign_detection_real.launch.py  stop_sign_detection_sim.launch.py  wall_following.launch.py  wall_following_real.launch.py  wall_following_sim.launch.py
Capstone Project/capstone_project/capstone_project/models/apriltag/: model.config  model.sdf
Capstone Project/capstone_project/capstone_project/models/ground/: ground.material  model.config  model.sdf
Capstone Project/capstone_project/capstone_project/models/marker/: marker.material  model.config  model.sdf
Capstone Project/capstone_project/capstone_project/models/obstacles/: model.config  model.sdf
Capstone Project/capstone_project/capstone_project/models/traffic_sign/: model.config  model.sdf  traffic_sign.material
Capstone Project/capstone_project/capstone_project/models/walls/: model.config  model.sdf
Capstone Project/capstone_project/capstone_project/rviz/: capstone_project_real.rviz  capstone_project_sim.rviz
Capstone Project/capstone_project/capstone_project/worlds/: apriltag_tracking.sdf  capstone_project.sdf  capstone_project.world  line_following.sdf  obstacle_avoidance.sdf  stop_sign_detection.sdf  wall_following.sdf
Capstone Project/capstone_project/darknet_ros/: README.md
Capstone Project/capstone_project/v4l2_camera/: README.md
Capstone Project/presentations/: final_presentation_l.pptx
Group/: README.md
HW03/Chinmay/: ROS1.mkv
Mini Assignment 1/Chinmay/: README.md
Mini Assignment 1/Tanmay/: README.md
Mini Assignment 2/Chinmay/: README.md  ROS2.mkv
Mini Assignment 2/Tanmay/: README.md  ROS1.mkv  ROS2.mkv
Mini Assignment 3/: README.md  TurtleBot3_Acknowledgement.docx
Mini Assignment 4/: README.md
Mini Assignment 4/camera_calibration/v4l2_camera/: README.md
Mini Assignment 4/results/calibrationdata/: camera_params.txt  camera_params.yaml
(+84 files in other folders)
