<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assignment_1b</name>
  <version>0.1.0</version>
  <description>Assignment 1B for the course AuE-8230 "Autonomy: Science and Systems" at CU-ICAR (Spring 2023)</description>
  <maintainer email="csamak@clemson.edu">Chinmay Samak</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
